# bicyclic_mat_mul

./: README.md
seal_install/: run.sh
seal_install/native/examples/: 5_ckks_basics.cpp  6_rotation.cpp
seal_install/native/src/seal/: evaluator.cpp  evaluator.h
seal_install/native/src/seal/util/: polyarithsmallmod.cpp  polyarithsmallmod.h
src/: R_T_enc_cipher.h  block_long_cipher.h  coprime_enc_cipher.h  enc_mat_mul.cpp  enc_mat_mul.h  jiang_enc_cipher.h  long_enc_cipher.h  lu_enc_cipher.h  matrix.cpp  matrix.h  strassen_block.h  utils.cpp  utils.h
test/: CMakeLists.txt  test_enc_mat_mul.cpp
